--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,6 +88,27 @@
     font-weight: bold;
 }
 
+.about-me {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    margin: 20px;
+}
+
+.about-me-text {
+    max-width: 50vw;
+    flex: 1;
+    text-align: right;
+}
+
+.profile-image {
+    max-width: min(50vw, 400px);   /* 25% of the viewport width */
+    max-height: 50vh;  /* 25% of the viewport height */
+    width: auto;       /* Maintain aspect ratio */
+    height: auto;      /* Maintain aspect ratio */
+    border-radius: 8px;
+}
+
 /* Links */
 a {
     color: var(--accent-color);
