--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,8 +43,16 @@
     color: black;
 }
 
+.row {
+    display: flex;
+}
+
 /* Cards */
 .card {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
     border: 1px solid var(--alt-background-color);
     transition: transform 0.3s, box-shadow 0.3s;
 }
@@ -54,6 +62,10 @@
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
 }
 
+.card-body {
+    flex: 1 1 auto;
+}
+
 .card-text {
     padding: 10px;
 }
@@ -61,6 +73,10 @@
 .card-header {
     background-color: var(--alt-background-color);
     color: white;
+}
+
+.card-footer {
+    margin-top: auto;
 }
 
 /* Hero Section */
